# learn-ukrainian.github.io

./: .actrc  .branch-status  .coverage  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  .mcp.json  .pre-commit-config.yaml  .trufflehogignore  .yamllint  AGENTS.md  ANTIGRAVITY-BRIEF.md  CLAUDE-SESSION-STATUS.md  CLAUDE.md  CODEBASE_QUALITY_REVIEW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  HANDOFF-A1-REBUILD.md  LICENSE  LICENSE-CONTENT.md  Makefile  README.md  SECURITY.md  UI-REVIEW-FINDINGS.md  ULP_MAPPING_PROMPT.md  a1_audit_results.txt  a1_proofread_all.txt  a2_audit_report.txt  a2_audit_results.txt  a2_failing_details.txt  a2_failures_detailed.txt  a2_full_audit_results.txt  a2_production_audit.txt  a2_validation_results.csv  audit_a2_batch.sh  audit_a2_production.sh  (+258 more)
.astro/: data-store.json  settings.json
.codex/: config.toml  hooks.json
.cursor/: mcp.json
.dagger/: README.md  pyproject.toml
.gemini/: config.yaml  settings.json
.github/: PULL_REQUEST_TEMPLATE.md  act-event-push.json  dependabot.yml
.mcp/: test_ukrainian_validator.py
.worktree-briefs/: 1282-excerpt-selection.md  1322-convergent-pipeline.md  1370-writer-prompt-harden.md  1373-a6-wiki-ingest.md  1396-effort-wiring.md  1404-rate-limit-misclassification.md  1405-ci-red-fix.md  1406-batch-gemini-unify.md  1412-at-the-cafe-review-and-lock.md  1450-fix-attribution-and-chunkid-leak.md  claude-1344-replace-phase-a-canary-articles.md  claude-citation-drift-batch-1488-1494.md  codex-1268-gemini-rewrite-budget.md  codex-1286-review-transport.md  codex-1395-git-cleanup-endpoint.md  codex-1403-prevent-auto-merge.md  codex-1434-attribution-routing.md  codex-1434-compiler-attribution.md  codex-1452-alignment-manifest.md  codex-1453-sidecar-freshness.md  codex-1457-extract-terms.md  codex-1459-chunk-id-leak.md  codex-compile-strip-mcp-warning.md  codex-monitor-api-lock-state.md  codex-peak-ci-red-plus-force-audit.md  colors-pilot-post-adr007.md  gemini-1458-dialogue-turns.md  gemini-peak-bakeoff-pattern-analysis.md  per-dim-reviewer-refactor.md  scale-checkpoint-first-contact-review-and-lock.md  scale-colors-review-and-lock.md  scale-food-and-drink-review-and-lock.md  scale-hey-friend-review-and-lock.md  scale-holidays-review-and-lock.md  scale-my-day-review-and-lock.md  scale-my-family-review-and-lock.md  scale-reading-ukrainian-review-and-lock.md  scale-shopping-review-and-lock.md  scale-sounds-letters-and-hello-review-and-lock.md  scale-special-signs-review-and-lock.md  (+3 more)
activities/: a2-bridge.yaml  a2-finale.yaml  advanced-pronouns.yaml  alternation-vowels.yaml  aspect-future-tense.yaml  aspect-in-narration.yaml  b1-baseline-future-aspect.yaml  b1-baseline-past-present.yaml  checkpoint-aspect.yaml  checkpoint-communication.yaml  checkpoint-genitive.yaml  checkpoint-instrumental.yaml  checkpoint-verbs.yaml  genitive-nuances.yaml  gerund-phrases.yaml  gerunds-imperfective.yaml  home-and-daily-life.yaml  homogeneous-members.yaml  imperative-complete.yaml  noun-subclasses-hissing.yaml  participles-active.yaml  participles-passive.yaml  people-and-relationships.yaml  shopping-and-services.yaml  sounds-letters-and-hello.yaml  sviy-and-sebe.yaml  where-to.yaml  word-formation-adjectives.yaml  work-and-career.yaml
agents_extensions/: README.md
audit/: 2026-05-13-codex-mcp-visibility-investigation.html  2026-05-19-zizmor-post-fix.txt  2026-05-24-writer-prompt-competing-rules.md  INDEX-bakeoff-evidence.md  errorcorrection_baseline_report.json  (+11 more)
(+88116 files in other folders)
