[project]
name = "learn-ukrainian"
version = "1.0.0"
description = "Ukrainian language learning curriculum generator"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "website: Docusaurus website integrity tests (links, frontmatter, sidebar)",
    "slow: tests that load ML models or require long execution time",
]

[tool.ruff]
line-length = 120
target-version = "py310"
