[project]
name = "learn-ukrainian"
version = "1.0.0"
description = "Ukrainian language learning curriculum generator"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "website: Docusaurus website integrity tests (links, frontmatter, sidebar)",
    "slow: tests that load ML models or require long execution time",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".venv/",
    "node_modules/",
    "starlight/",
    "scripts/oneoff/",
]

[tool.ruff.lint]
select = [
    "F",     # Pyflakes (undefined names, unused imports/vars)
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort (import ordering)
    "UP",    # pyupgrade (modernize syntax)
    "B",     # flake8-bugbear (common bugs)
    "SIM",   # flake8-simplify
    "RUF",   # Ruff-specific rules
]
ignore = [
    # Legitimate project-specific ignores (Ukrainian codebase)
    "RUF001",  # ambiguous Unicode char in string — Ukrainian text is the product
    "RUF002",  # ambiguous Unicode char in docstring — Ukrainian text
    "RUF003",  # ambiguous Unicode char in comment — Ukrainian text
    "E402",    # module import not at top — unavoidable with sys.path manipulation
    "E501",    # line too long — too many existing, not worth enforcing now
    "E741",    # ambiguous variable name — false positives with Ukrainian text vars
]

[tool.ruff.lint.per-file-ignores]
"scripts/api/*.py" = ["B008"]  # function call in default arg (FastAPI Depends)
"tests/*.py" = ["F841", "SIM117"]  # unused variables + nested with OK in tests
"scripts/*.py" = ["F401", "F811", "E302", "F821"]  # stubs at root — redirect boilerplate

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "starlight/",
    "node_modules/",
]
# Gradual adoption: start with core files only
files = [
    "scripts/pipeline_v5.py",
    "scripts/pipeline_lib.py",
    "scripts/build_module_v5.py",
    "scripts/audit/core.py",
]

[tool.coverage.run]
source = ["scripts"]
omit = []

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 0  # Start with baseline, increase over time
